Add the feature section

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,18 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	
+	<section class="features">
+		<div class="container">
+			<h3 class="section-title">We are <span class="orange">featured</span> on</h3>
+			<ul class="feature-list row">
+				<li class="col-md-3 col-xs-12"><img src="img/web.png" alt=""></li>
+				<li class="col-md-3 col-xs-12"><img src="img/web1.png" alt=""></li>
+				<li class="col-md-3 col-xs-12"><img src="img/web2.png" alt=""></li>
+				<li class="col-md-3 col-xs-12"><img src="img/web3.png" alt=""></li>
+			</ul>
+		</div>
+
+	</section>
 
 
 	<script src="js/libs.min.js"></script>
